Change directories, move tests to web module